tests/ui/parser/doc-before-eof.rs
fn main() {}

/// hi //~ERROR expected item after doc comment
